TPort 1.20.2
        /*
         * changelog 1.20.2 update:
         *
         * added /tport look [type]
         * With this command players can teleport the block/entity/fluid that they are looking at.
         * For this a new cooldown type is created: LookTP
         *
         * The TPort Keyboard got updated:
         * added:
         *  - Quick Type. This opens a sign where players can type with their own keyboard and paste from their clipboard
         *  - Title formatting. This is a toggle where players can preview their typed text with colors or as plain text
         *      - example formatting on (imagine with colors): GREEN BLUE, example formatting off: &aGREEN &9BLUE
         *      - note that typing colors in this example is not possible, but when formatting is off you see the color codes
         *  - Cursor. The keyboard now has a cursor for easy typing in between text. It is shown as a red |
         *      - when formatting is on the cursor jumps over the color
         *  - Color edit. When clicking (left/right) on the color button you can now choose if you want to insert a color, or edit the current color
         *      - when the cursor is on a color, it edits this color
         *      - when the cursor is on text, it edits the previous color (since this color is used for the selected text)
         *  - added 'delete' to the backspace button
         *
         * added to the Quick Edit menu:
         *  - Offer/Revoke. This is from the transfer function set. Accepting/Rejecting is in the settings menu
         * added to the settings menu:
         *  - Restore
         *  - Home
         *  - Transfer
         *  - Features
         *  - Redirects
         *  - Tags
         *  - PLTP
         *  - Resource Pack
         *  - PublicTP
         */